feat: Add brownfield integration - run Ralphy in any project
- Add --init to analyze project and generate memory.md
- Add single-task mode for brownfield projects
- Add --memory flag for custom memory file
- Add memory context loading for project conventions
- Add npm package configuration for npx ralphy

Usage:
  ralphy --init           # Generate memory.md for project
  ralphy "Add login"      # Run single task with context
  npx ralphy "Add login"  # Via npm package

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "start": "./ralphy.sh",
-    "init": "./ralphy.sh --init"
+    "init": "./ralphy.sh --init",
+    "test": "echo 'No tests specified'",
+    "lint": "echo 'No lint specified'"
   },
   "keywords": [
     "ai",
@@ -16,7 +18,8 @@
     "autonomous",
     "claude",
     "cursor",
-    "opencode"
+    "opencode",
+    "qwen"
   ],
   "author": "Akshay Joshi",
   "license": "MIT",
@@ -26,5 +29,9 @@
   },
   "engines": {
     "node": ">=18.0.0"
-  }
+  },
+  "files": [
+    "ralphy.sh",
+    "README.md"
+  ]
 }
